# appdotbuild-agent

./: .gitignore  CLAUDE.md  pyproject.toml
agent/axum_agent/template/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
agent/axum_agent/template/migrations/: .gitkeep
agent/axum_agent/template/src/: config.rs  error.rs  main.rs  models.rs  schema.rs
agent/axum_agent/template/templates/: base.html  index.html
agent/axum_agent/template/tests/: integration.rs
dabgent/: .env.example  Cargo.toml  DESIGN.md  install.sh
dabgent/dabgent/: CLAUDE.md
dabgent/dabgent_agent/: Cargo.toml
dabgent/dabgent_agent/examples/: Dockerfile  basic.rs  basic_openrouter.rs  databricks_explorer.rs  databricks_worker.rs  pipeline.rs  planner_worker.rs  planning.rs  test_event_flow.rs  test_planner.rs  test_worker_orchestrator.rs
dabgent/dabgent_agent/src/: agent.rs  event.rs  lib.rs  llm.rs  orchestrator.rs  pipeline.rs  planner.rs  planning.rs  sandbox_seed.rs  thread.rs  tool.rs  validator.rs  worker_orchestrator.rs
dabgent/dabgent_agent/src/processor/: agent.rs  completion.rs  databricks.rs  finish.rs  link.rs  llm.rs  mod.rs  replay.rs  sandbox.rs  thread.rs  tools.rs  utils.rs
dabgent/dabgent_agent/src/toolbox/: basic.rs  databricks.rs  mod.rs  planning.rs
dabgent/dabgent_agent/src/tools/: mod.rs  user_interaction.rs
dabgent/dabgent_agent/tests/: e2e_basic.rs  e2e_generation.rs  e2e_planner.rs  finisher_e2e.rs  llm_providers.rs  task_list_validator.rs
dabgent/dabgent_agent/tests/common/: mod.rs
dabgent/dabgent_cli/: Cargo.toml
dabgent/dabgent_cli/examples/: basic_agent.rs  databricks.rs
dabgent/dabgent_cli/src/: agent.rs  agent_ui.rs  app.rs  event_widget.rs  events.rs  lib.rs  main.rs  ui.rs  widgets.rs
dabgent/dabgent_fastapi/: Cargo.toml  fastapi.Dockerfile
dabgent/dabgent_fastapi/examples/: dataapps.rs  hotreload.rs
dabgent/dabgent_fastapi/src/: artifact_preparer.rs  lib.rs  templates.rs  toolset.rs  validator.rs
dabgent/dabgent_integrations/: Cargo.toml
dabgent/dabgent_integrations/src/: databricks.rs  deployment.rs  lib.rs
dabgent/dabgent_mcp/: Cargo.toml  README.md  build.rs
dabgent/dabgent_mcp/examples/: client.rs  validate_template.rs
dabgent/dabgent_mcp/src/: config.rs  lib.rs  main.rs  state.rs
dabgent/dabgent_mcp/src/providers/: databricks.rs  deployment.rs  io.rs  mod.rs
dabgent/dabgent_mcp/templates/: trpc_guidelines.md
dabgent/dabgent_mcp/tests/: initiate_project.rs  smoke_test.rs  validate_project.rs
dabgent/dabgent_mq/: Cargo.toml
dabgent/dabgent_mq/benches/: pubsub_bench.rs
dabgent/dabgent_mq/src/: lib.rs  listener.rs  models.rs  store.rs
dabgent/dabgent_mq/src/db/: mod.rs  postgres.rs  sqlite.rs
dabgent/dabgent_mq/tests/: postgres_store.rs
dabgent/dabgent_sandbox/: Cargo.toml
dabgent/dabgent_sandbox/src/: dagger.rs  lib.rs  manager.rs
dabgent/dabgent_templates/: Cargo.toml
dabgent/dabgent_templates/src/: lib.rs  main.rs
dabgent/dabgent_templates/template_trpc/: .dabgent_state  CLAUDE.md  build.sh  package.json
dabgent/dabgent_templates/template_trpc/server/: package.json
dabgent/docs/: DESIGN.md  HOW_TO_START_CONTRIBUTING.md
dataapps/template_minimal/backend/: pyproject.toml
edda/: Cargo.toml  install.sh
edda/edda_agent/: Cargo.toml
edda/edda_agent/src/processor/: databricks.rs
edda/edda_agent/src/toolbox/: basic.rs
edda/edda_agent/tests/: e2e_basic.rs  e2e_planner.rs  finisher_e2e.rs
edda/edda_desktop/: Cargo.toml  build.rs
edda/edda_desktop/src/: agent.rs  main.rs  mcp_client.rs
edda/edda_integrations/: Cargo.toml
edda/edda_integrations/src/: databricks.rs  deployment.rs  lib.rs
edda/edda_mcp/: Cargo.toml  README.md
edda/edda_mcp/examples/: client.rs
edda/edda_mcp/src/: config.rs  engine_guide.rs  lib.rs  main.rs  mcp_helpers.rs  session.rs  trajectory.rs  version_check.rs
edda/edda_mcp/src/providers/: databricks.rs  databricks_cli.rs  databricks_rest.rs  deployment.rs  google_sheets.rs  io.rs  mod.rs  (+1 more)
edda/edda_mcp/tests/: initiate_project.rs  screenshot_validation.rs  smoke_test.rs  trajectory_tracking.rs  validate_project.rs
edda/edda_sandbox/src/: lib.rs
edda/edda_screenshot/: Cargo.toml
edda/edda_screenshot/playwright/: batch-screenshot.spec.ts  screenshot.spec.ts
edda/edda_screenshot/src/: lib.rs  playwright.rs
edda/edda_screenshot/tests/: integration.rs
edda/edda_templates/: Cargo.toml
edda/edda_templates/src/: lib.rs  local.rs  merge.rs  template.rs
edda/edda_templates/template_trpc/: CLAUDE.md
edda/edda_transpiler/: Cargo.toml  README.md  USAGE.md
edda/edda_transpiler/examples/: README.md  sample_python.py
edda/edda_transpiler/src/: lib.rs  main.rs  python_parser.rs  template.rs
klaudbiusz/: .env.example  .gitignore  MLFLOW_TEST_RESULTS.md  README.md  evaluate_apps.py  pyproject.toml  run_all_evals.sh  run_mcp_eval.sh  run_vanilla_eval.sh
klaudbiusz/.claude-plugin/: README.md
klaudbiusz/agents/: dataresearch.md
klaudbiusz/cli/: analyze_trajectories.py  archive_evaluation.sh  bulk_run.py  cleanup_evaluation.sh  codegen.py  codegen_multi.py  compare_evaluations.py  eval_checks.py  eval_metrics.py  evals2.md  evaluate_all.py  evaluate_all_agent.py  evaluate_app.py  evaluate_app_dagger.py  generate_eval_viewer.py  generate_html_viewer.py  main.py  mlflow_compare.py  mlflow_tracker.py  prompts_databricks.py  prompts_test.py  prompts_web.py  repro_sdk_mcp.py  screenshot.py  shared.py  single_run.py  template_detection.py  trajectory.py  ts_workspace.py  workspace.py
klaudbiusz/cli/evaluation/: __init__.py  evaluate_all.py  evaluate_app.py  evaluate_app_dagger.py
klaudbiusz/cli/generation/: __init__.py  bulk_run.py  codegen.py  codegen_multi.py  screenshot.py  single_run.py
klaudbiusz/cli/utils/: dagger_utils.py  litellm_multiprocess_fix.py  mlflow_tracker.py  shared.py  template_detection.py  ts_workspace.py  workspace.py
klaudbiusz/config/: databricks-cli-litellm.json  databricks-cli.json
klaudbiusz/eval-docs/: DORA_METRICS.md  EVALUATION_METHODOLOGY.md  README.md  evals.md
(+328 files in other folders)
