[workspace]
resolver = "3"
members = ["dabgent_agent", "dabgent_cli", "dabgent_mq", "dabgent_sandbox", "dabgent_integrations", "dabgent_mcp", "dabgent_templates"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 0
debug = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
