[package]
name = "dabgent_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
rig-core = "0.19.0"
dabgent_mq = { path = "../dabgent_mq" }
dabgent_sandbox = { path = "../dabgent_sandbox" }
dabgent_integrations = { path = "../dabgent_integrations" }
clap = { version = "4.5.47", features = ["derive"] }
tokio-stream = "0.1"
tempfile = "3.0"
sha2 = "0.10"
hex = "0.4"
regex = "1.0"

[dev-dependencies]
dagger-sdk = "0.18.16"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "tls-native-tls", "json", "chrono", "migrate"] }
dotenvy = "0.15"

[[example]]
name = "basic"

[[example]]
name = "databricks_explorer"
