[package]
name = "dabgent_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
rig-core = "0.19.0"
dabgent_agent = { path = "../dabgent_agent" }
dabgent_mq = { path = "../dabgent_mq" }
dabgent_sandbox = { path = "../dabgent_sandbox" }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.29"
clap = { version = "4.5.47", features = ["derive"] }
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "json", "chrono", "migrate"] }
dagger-sdk = "0.18.16"
dotenvy = "0.15"
futures = "0.3"
