[package]
name = "dabgent_fastapi"
version = "0.1.0"
edition = "2021"

[dependencies]
dabgent_agent = { path = "../dabgent_agent" }
dabgent_mq = { path = "../dabgent_mq" }
dabgent_sandbox = { path = "../dabgent_sandbox" }
eyre = "0.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
thiserror = "2.0"

[dev-dependencies]
dagger-sdk = "0.18.16"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "tls-native-tls", "json", "chrono", "migrate"] }
tempfile = "3.0"
