[package]
name = "edda_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mcp_client_rs = { git = "https://github.com/darinkishore/mcp_client_rust" }
rig-core = "0.19"

[build-dependencies]
anyhow = "1.0"
