[package]
name = "edda_integrations"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
google-sheets4 = "6.0"
hyper-util = { version = "0.1", features = ["client-legacy"] }
log = "0.4"
regex = "1.0"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
urlencoding = "2.1"
yup-oauth2 = "11.0"
