[package]
name = "edda_transpiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edda_transpiler"
path = "src/main.rs"

[dependencies]
# MCP
rmcp = { version = "0.8", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync"] }

# Error handling
eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Edda components
edda_sandbox = { path = "../edda_sandbox" }

# Template embedding
rust-embed = "8.5"

# Regex for Python parsing
regex = "1.11"
