# Minimal DataApps backend configuration
# This file defines Python dependencies and development tools

[project]
name = "dataapps-minimal"
version = "0.1.0"
description = "Minimal DataApps template with FastAPI + React Admin compatibility"
requires-python = ">=3.12"

# Core dependencies - only what's essential for the template
dependencies = [
    "fastapi>=0.115.12",      # Web framework for APIs
    "polars>=1.31.0",         # Fast dataframes for data processing
    "pydantic>=2.11.3",       # Data validation and serialization
    "python-multipart>=0.0.6", # For file uploads and form data
    "uvicorn[standard]>=0.34.0", # ASGI server for running FastAPI
]

# Development dependencies (optional)
[dependency-groups]
dev = [
    "pytest>=8.3.5",         # Testing framework
    "ruff>=0.11.5",          # Fast Python linter and formatter
    "pyright>=1.1.400",     # Type checker
    "pytest-asyncio",        # For testing async code
]

# Linting and formatting configuration
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]  # Error, pyflakes, import sorting, naming
ignore = []

# Type checking configuration
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

# TODO: Add any additional dependencies your app needs:
# Example for database integration:
# dependencies = [
#     "fastapi>=0.115.12",
#     "polars>=1.31.0",
#     "pydantic>=2.11.3",
#     "python-multipart>=0.0.6",
#     "uvicorn[standard]>=0.34.0",
#     "sqlalchemy>=2.0.0",    # For database ORM
#     "asyncpg>=0.29.0",      # For PostgreSQL async driver
# ]
