[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_impl"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rust_impl._rust_impl"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
